--- a/style.css
+++ b/style.css
@@ -1,11 +1,50 @@
+body {
+    font-family: Times;
+    padding: 1px;
+}
+
+nav{
+    background-color: grey;
+    padding: 10px; 
+    margin-bottom: 10px;
+
+   
+}
+
+ul {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+li{
+    
+    padding: 1rem;
+    width : 6rem;
+    background-color: rgb(62, 62, 127);
+    text-transform: none;
+    list-style: none;
+    margin: 2px;
+   
+}
+
+a {
+    color: white;
+}
+
+
+
+
 .sec_1{
     background-color: lightslategrey;
     color: white;
     padding: 1rem;
+    text-align: justify;
 }
 
 .sec_2{
     background-color: lightblue;
     color: white;
     padding: 1rem;
+    text-align: justify;
 }
