--- a/style.css
+++ b/style.css
@@ -3,36 +3,39 @@ body {
     padding: 1px;
 }
 
-nav{
-    background-color: grey;
-    padding: 10px; 
-    margin-bottom: 10px;
 
-   
-}
 
 ul {
-    display: flex;
-    justify-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+    margin-bottom: 30px;
+  }
+  
+  li {
+    float: left;
     
-}
-
-li{
-    
-    padding: 1rem;
-    width : 6rem;
-    background-color: rgb(62, 62, 127);
-    text-transform: none;
-    list-style: none;
-    margin: 2px;
-   
-}
-
-a {
+  }
+  
+  li a {
+    display: block;
     color: white;
-}
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+  }
+  
 
+  li a:hover {
+    background-color: #111;
+  }
 
+  .active {
+    background-color: lightblue;
+  }
 
 
 .sec_1{
@@ -40,6 +43,7 @@ a {
     color: white;
     padding: 1rem;
     text-align: justify;
+   
 }
 
 .sec_2{
@@ -48,3 +52,9 @@ a {
     padding: 1rem;
     text-align: justify;
 }
+
+.dropdown {
+    display: inline-flex;
+    
+  }
+  
